...
    )
    Spacer(modifier = Modifier.height(10.dp))
    NormalTextField(
        stringState = brandGasStation,
        modifier = Modifier
            .fillMaxWidth()
            .testTag("brand_gas_input"),
        errorMsg = stringResource(id = R.string.brand_gas_input),
        validation = { str -> str.length > 1 })
    Spacer(modifier = Modifier.height(20.dp))

    //discount value
    LabelMedium(
...
        color = MaterialTheme.colorScheme.primary
    )
    Spacer(modifier = Modifier.height(10.dp))
    FloatTextField(
        numberState = discountValue, modifier = Modifier
            .fillMaxWidth()
            .testTag("discount_input")
    )
    Spacer(modifier = Modifier.height(20.dp))

    //Supply
    RowToDisplay(
        leftString = stringResource(id = R.string.minimum_supply),
...
        color = MaterialTheme.colorScheme.primary
    )

    Spacer(modifier = Modifier.height(15.dp))

    //diesel check
    RowCheck(stringResource(id = R.string.diesel), dieselCheck, testTag = "diesel_check")

    //gasoline 95 check
    RowCheck(stringResource(id = R.string.gasoline_95), gasoline95Check, testTag = "95_check")

    //gasoline 98 check
    RowCheck(stringResource(id = R.string.gasoline_98), gasoline98Check, testTag = "98_check")

    //glp check
    RowCheck(stringResource(id = R.string.lpg), glpCheck, testTag = "lpg_check")

    Spacer(modifier = Modifier.height(15.dp))

    LabelMedium(
        text = stringResource(id = R.string.expiration_date),
        color = MaterialTheme.colorScheme.primary
...


        OutlinedButton(
            colors = ButtonDefaults.buttonColors(
                backgroundColor = colorResource(id = R.color.success),
            ),
            modifier = Modifier.testTag("submit_button"),
            shape = RoundedCornerShape(15.dp),
            onClick = {
                val (msg, result) = isDataValid()
                if (result) {
                    addCoupon()
                    FancyToast.makeText(
...
                    text = leftString,
                    color = MaterialTheme.colorScheme.primary
                )
                NormalCheckBox(
                    checked = leftCheckedValue.value,
                    onCheckedChange = { leftCheckedValue.value = !leftCheckedValue.value },
                    modifier = Modifier.testTag("min_supply_check")
                )
            }
            Spacer(modifier = Modifier.height(10.dp))
            if (leftCheckedValue.value) {
                IntTextField(
                    numberState = leftValue,
...
                LabelMedium(
                    text = rightString,
                    color = MaterialTheme.colorScheme.primary
                )
                NormalCheckBox(
                    checked = rightCheckedValue.value,
                    modifier = Modifier.testTag("max_supply_check"),
                    onCheckedChange = { rightCheckedValue.value = !rightCheckedValue.value })
            }
            Spacer(modifier = Modifier.height(10.dp))
            if (rightCheckedValue.value) {
                IntTextField(
                    numberState = rightValue,
...
            ) {
                LabelMedium(
                    text = leftString,
                    color = MaterialTheme.colorScheme.primary
                )
                NormalCheckBox(
                    modifier = Modifier.testTag("start_check"),
                    checked = leftCheckedValue.value,
                    onCheckedChange = { leftCheckedValue.value = !leftCheckedValue.value })
            }
            Spacer(modifier = Modifier.height(10.dp))
            if (leftCheckedValue.value) {
                Calendar(context, leftValue)
...
                LabelMedium(
                    text = rightString,
                    color = MaterialTheme.colorScheme.primary
                )
                NormalCheckBox(
                    checked = rightCheckedValue.value,
                    modifier = Modifier.testTag("end_check"),
                    onCheckedChange = { rightCheckedValue.value = !rightCheckedValue.value })
            }
            Spacer(modifier = Modifier.height(10.dp))
            if (rightCheckedValue.value) {
                Calendar(context, rightValue)
            } else {
...
