...
        navController.navigate("my_coupons_screen")
    }

    CouponsTemplate {
        Column(
            modifier = Modifier
                .testTag("root")
                .fillMaxWidth()
                .verticalScroll(rememberScrollState())
        ) {
            CouponInfoInsertion(
                couponType = couponType,
                brandGasStation = brandGasStation,
...
