...
    <string name="lpg">GPL</string>
    <string name="eletric">Eletríco</string>
    <string name="home">Casa</string>
    <string name="work">Trabalho</string>
    <string name="save_location">Guardar localização do parque</string>
    <string name="my_vehicles">Meus veículos</string>
    <string name="my_coupons">Meus cupões</string>
    <string name="brand">Marca</string>
    <string name="model">Modelo</string>
    <string name="specification">Especificações</string>
    <string name="add_vehicle">Adicionar veículo</string>
    <string name="maintenance">Manutenção</string>
    <string name="manual_registration">Registo manual</string>
    <string name="get_data_from_vin">Obter dados pelo VIN</string>
    <string name="plate">Matricula</string>
    <string name="vehicle_type">Tipo de veículo</string>
    <string name="without_vehicles">Não existem veículos registados</string>
    <string name="vehicle">Veículo</string>
    <string name="motorcycle">Motociclo</string>
    <string name="others">Outros</string>
    <string name="what_is_vehicle_type">Qual é o tipo de veículo?</string>
...
    <string name="oil_filter">Filtro do óleo</string>
    <string name="cabin_filter">Filtro habitáculo</string>
    <string name="front_brake_shims">Calços da frente</string>
    <string name="back_brake_shims">Calços traseiros</string>
    <string name="front_brake_disks">Discos travão frente</string>
    <string name="back_brake_disks">Discos travão traseiros</string>
    <string name="bad_plate_input">A matrícula deve ser do tipo: AA-00-AA , 00-AA-00, 00-00-AA</string>
    <string name="some_fields_empty">Alguns dos campos estão vazios</string>
    <string name="bad_input_info">Existem dados incorretos</string>
    <string name="number_of_stations">Número de postos</string>
    <string name="see_on_map">Ver no mapa</string>
    <string name="last_update">Última atualização</string>
    <string name="last_district">Última distrito</string>
...
